cmake_minimum_required(VERSION 3.17)
project(Offline_8__Hash_Table_)

set(CMAKE_CXX_STANDARD 14)

add_executable(Offline_8__Hash_Table_ main.cpp)
add_executable(HashTable_SeparateChaining HashTable_SeparateChaining.cpp)
add_executable(function_pointer_test function_pointer_test.cpp)
add_executable(HashTable_OpenAddressing HashTable_OpenAddressing.cpp)
add_executable(initial_test initial_test.cpp)
add_executable(gen gen.cpp)
add_executable(ReportSC ReportSC.cpp)
add_executable(ReportOA ReportOA.cpp)